Closed Bug 1609957 Opened 6 years ago Closed 5 years ago

Intermittent /IndexedDB/idb-explicit-commit.any.html | Transactions that explicitly commit and have errors should abort. - assert_equals: Expected abort event, but got complete event instead expected "abort" but got "complete"

Categories

(Core :: Storage: IndexedDB, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox75 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: sg)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: cbrindusan [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=285368254&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/fG0XsXLoTD63DlL36kQGYg/runs/0/artifacts/public/logs/live_backing.log
Reftest URL: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/fG0XsXLoTD63DlL36kQGYg/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1


[task 2020-01-17T13:15:06.954Z] 13:15:06 INFO - TEST-START | /IndexedDB/idb-explicit-commit.any.html
[task 2020-01-17T13:15:06.954Z] 13:15:06 INFO - Run 5/10
[task 2020-01-17T13:15:06.958Z] 13:15:06 INFO - Closing window 32
[task 2020-01-17T13:15:07.037Z] 13:15:07 INFO - PID 1736 | [Child 1768, Main Thread] WARNING: nsAppShell::Exit() called redundantly: file /builds/worker/workspace/build/src/widget/cocoa/nsAppShell.mm, line 725
[task 2020-01-17T13:15:07.037Z] 13:15:07 INFO - PID 1736 | ###!!! [Parent][RunMessage] Error: Channel closing: too late to send/recv, messages will be lost
[task 2020-01-17T13:15:07.091Z] 13:15:07 INFO - PID 1736 | [Child 1769, Main Thread] WARNING: NS_ENSURE_TRUE(mPresShell) failed: file /builds/worker/workspace/build/src/layout/base/nsPresContext.cpp, line 845
[task 2020-01-17T13:15:07.195Z] 13:15:07 INFO - PID 1736 | [Child 1768, Main Thread] WARNING: Extra shutdown CC: 'i < NORMAL_SHUTDOWN_COLLECTIONS', file /builds/worker/workspace/build/src/xpcom/base/nsCycleCollector.cpp, line 3362
[task 2020-01-17T13:15:07.236Z] 13:15:07 INFO - PID 1736 | nsStringStats
[task 2020-01-17T13:15:07.236Z] 13:15:07 INFO - PID 1736 | => mAllocCount: 8224
[task 2020-01-17T13:15:07.236Z] 13:15:07 INFO - PID 1736 | => mReallocCount: 0
[task 2020-01-17T13:15:07.236Z] 13:15:07 INFO - PID 1736 | => mFreeCount: 8224
[task 2020-01-17T13:15:07.236Z] 13:15:07 INFO - PID 1736 | => mShareCount: 9285
[task 2020-01-17T13:15:07.236Z] 13:15:07 INFO - PID 1736 | => mAdoptCount: 446
[task 2020-01-17T13:15:07.236Z] 13:15:07 INFO - PID 1736 | => mAdoptFreeCount: 452
[task 2020-01-17T13:15:07.239Z] 13:15:07 INFO - PID 1736 | => Process ID: 1768, Thread ID: 4438934976
[task 2020-01-17T13:15:07.322Z] 13:15:07 INFO - PID 1736 | [1770, Unnamed thread 119450080] WARNING: XPCOM objects created/destroyed from static ctor/dtor: file /builds/worker/workspace/build/src/xpcom/base/nsTraceRefcnt.cpp, line 198
[task 2020-01-17T13:15:07.322Z] 13:15:07 INFO - PID 1736 | ### XPCOM_MEM_BLOAT_LOG defined -- logging bloat/leaks to /var/folders/04/c5tnmbzj2v3d2hd11kp882kh000017/T/tmpTn05Ov.mozrunner/runtests_leaks_1716.log
[task 2020-01-17T13:15:07.322Z] 13:15:07 INFO - PID 1736 | [1770, Unnamed thread 119450080] WARNING: XPCOM objects created/destroyed from static ctor/dtor: file /builds/worker/workspace/build/src/xpcom/base/nsTraceRefcnt.cpp, line 198
[task 2020-01-17T13:15:07.322Z] 13:15:07 INFO - PID 1736 | [1770, MainThread] WARNING: XPCOM objects created/destroyed from static ctor/dtor: file /builds/worker/workspace/build/src/xpcom/base/nsTraceRefcnt.cpp, line 198
[task 2020-01-17T13:15:07.322Z] 13:15:07 INFO - PID 1736 | [1770, MainThread] WARNING: XPCOM objects created/destroyed from static ctor/dtor: file /builds/worker/workspace/build/src/xpcom/base/nsTraceRefcnt.cpp, line 198
[task 2020-01-17T13:15:07.349Z] 13:15:07 INFO - PID 1736 | [Child 1770, Main Thread] WARNING: No CID found when attempting to map contract ID: file /builds/worker/workspace/build/src/xpcom/components/nsComponentManager.cpp, line 721
[task 2020-01-17T13:15:07.474Z] 13:15:07 INFO - PID 1736 | [Child 1769, Main Thread] WARNING: Trying to request nsIHttpChannel from DocumentChannel, this is likely broken: file /builds/worker/workspace/build/src/netwerk/ipc/DocumentChannel.cpp, line 63
[task 2020-01-17T13:15:07.931Z] 13:15:07 INFO - PID 1736 | [Parent 1736, QuotaManager IO] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80630001: file /builds/worker/workspace/build/src/storage/mozStorageConnection.cpp, line 666
[task 2020-01-17T13:15:07.931Z] 13:15:07 INFO - PID 1736 | [Parent 1736, QuotaManager IO] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80630001: file /builds/worker/workspace/build/src/storage/mozStorageService.cpp, line 649
[task 2020-01-17T13:15:07.931Z] 13:15:07 INFO - PID 1736 | [Parent 1736, QuotaManager IO] WARNING: Received NS_ERROR_STORAGE_BUSY when attempting to open database '/var/folders/04/c5tnmbzj2v3d2hd11kp882kh000017/T/tmpTn05Ov.mozrunner/storage/default/http+++web-platform.test+8000/idb/483603754d.bs%w2oFrIhntd+enxoe.sqlite', retrying for up to 10 seconds: file /builds/worker/workspace/build/src/dom/indexedDB/ActorsParent.cpp, line 4138
[task 2020-01-17T13:15:08.214Z] 13:15:08 INFO - PID 1736 | [Parent 1736, QuotaManager IO] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80630001: file /builds/worker/workspace/build/src/storage/mozStorageConnection.cpp, line 666
[task 2020-01-17T13:15:08.215Z] 13:15:08 INFO - PID 1736 | [Parent 1736, QuotaManager IO] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80630001: file /builds/worker/workspace/build/src/storage/mozStorageService.cpp, line 649
[task 2020-01-17T13:15:08.215Z] 13:15:08 INFO - PID 1736 | [Parent 1736, QuotaManager IO] WARNING: Received NS_ERROR_STORAGE_BUSY when attempting to open database '/var/folders/04/c5tnmbzj2v3d2hd11kp882kh000017/T/tmpTn05Ov.mozrunner/storage/default/http+++web-platform.test+8000/idb/2239488408d.ba%t2aFdI+nedhetx+e.sqlite', retrying for up to 10 seconds: file /builds/worker/workspace/build/src/dom/indexedDB/ActorsParent.cpp, line 4138
[task 2020-01-17T13:15:08.464Z] 13:15:08 INFO - PID 1736 | [Parent 1736, QuotaManager IO] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80630001: file /builds/worker/workspace/build/src/storage/mozStorageConnection.cpp, line 666
[task 2020-01-17T13:15:08.465Z] 13:15:08 INFO - PID 1736 | [Parent 1736, QuotaManager IO] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80630001: file /builds/worker/workspace/build/src/storage/mozStorageService.cpp, line 649
[task 2020-01-17T13:15:08.465Z] 13:15:08 INFO - PID 1736 | [Parent 1736, QuotaManager IO] WARNING: Received NS_ERROR_STORAGE_BUSY when attempting to open database '/var/folders/04/c5tnmbzj2v3d2hd11kp882kh000017/T/tmpTn05Ov.mozrunner/storage/default/http+++web-platform.test+8000/idb/3074794764d.bt%i2mFmIoncd+esxle.sqlite', retrying for up to 10 seconds: file /builds/worker/workspace/build/src/dom/indexedDB/ActorsParent.cpp, line 4138
[task 2020-01-17T13:15:08.775Z] 13:15:08 INFO - PID 1736 | JavaScript error: , line 0: uncaught exception: Error: assert_unreached: Transaction with invalid "add" call should not be completed. Reached unreachable code
[task 2020-01-17T13:15:09.034Z] 13:15:09 INFO -
[task 2020-01-17T13:15:09.035Z] 13:15:09 INFO - TEST-PASS | /IndexedDB/idb-explicit-commit.any.html | Explicitly committed data can be read back out.
[task 2020-01-17T13:15:09.035Z] 13:15:09 INFO - TEST-PASS | /IndexedDB/idb-explicit-commit.any.html | commit() on a version change transaction does not cause errors.
[task 2020-01-17T13:15:09.035Z] 13:15:09 INFO - TEST-PASS | /IndexedDB/idb-explicit-commit.any.html | A committed transaction becomes inactive immediately.
[task 2020-01-17T13:15:09.035Z] 13:15:09 INFO - TEST-PASS | /IndexedDB/idb-explicit-commit.any.html | A committed transaction is inactive in future request callbacks.
[task 2020-01-17T13:15:09.035Z] 13:15:09 INFO - TEST-PASS | /IndexedDB/idb-explicit-commit.any.html | Puts issued after commit are not fulfilled.
[task 2020-01-17T13:15:09.035Z] 13:15:09 INFO - TEST-PASS | /IndexedDB/idb-explicit-commit.any.html | Calling commit on an aborted transaction throws.
[task 2020-01-17T13:15:09.035Z] 13:15:09 INFO - TEST-PASS | /IndexedDB/idb-explicit-commit.any.html | Calling commit on a committed transaction throws.
[task 2020-01-17T13:15:09.035Z] 13:15:09 INFO - TEST-PASS | /IndexedDB/idb-explicit-commit.any.html | Calling abort on a committed transaction throws and does not prevent persisting the data.
[task 2020-01-17T13:15:09.035Z] 13:15:09 INFO - TEST-PASS | /IndexedDB/idb-explicit-commit.any.html | Calling txn.commit() when txn is inactive should throw.
[task 2020-01-17T13:15:09.035Z] 13:15:09 INFO - TEST-PASS | /IndexedDB/idb-explicit-commit.any.html | Transactions with same scope should stay in program order, even if one calls commit.
[task 2020-01-17T13:15:09.035Z] 13:15:09 INFO - TEST-UNEXPECTED-FAIL | /IndexedDB/idb-explicit-commit.any.html | Transactions that explicitly commit and have errors should abort. - assert_equals: Expected abort event, but got complete event instead expected "abort" but got "complete"

Summary: Intermittent TVw /IndexedDB/idb-explicit-commit.any.html | Transactions that explicitly commit and have errors should abort. - assert_equals: Expected abort event, but got complete event instead expected "abort" but got "complete" → Intermittent /IndexedDB/idb-explicit-commit.any.html | Transactions that explicitly commit and have errors should abort. - assert_equals: Expected abort event, but got complete event instead expected "abort" but got "complete"
Assignee: nobody → sgiesecke
Status: NEW → ASSIGNED
Regressions: 1497007
Regressed by: 1497007
No longer regressions: 1497007
Has Regression Range: --- → yes
Keywords: regression
Pushed by sgiesecke@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d14f292d8915 Fix race condition in determining the last request before commit. r=dom-workers-and-storage-reviewers,janv
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
Regressions: 1799374
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: